# cve_distilling

./: EXPERIMENT_NOTES_2026-03-26.md  README.md  pyproject.toml
benchmarks/: gpt52_blind_detect.json  gpt52_primevul_numeric_eval.json  qwen7b_base_blind_detect.json  qwen7b_juliet_numeric_stage1_eval.json  qwen7b_juliet_primevul_numeric_distilled_eval.json  qwen7b_primevul_numeric_base_eval.json  qwen7b_primevul_numeric_distilled_eval.json  qwen7b_sft_blind_detect.json
data/: eval_bigvul_detect_blind.jsonl  juliet_numeric_triage.jsonl  juliet_numeric_triage.manifest.json  primevul_numeric_triage_eval.jsonl  primevul_numeric_triage_train.jsonl  primevul_numeric_triage_train.manifest.json  primevul_numeric_triage_train_distilled.jsonl  primevul_numeric_triage_train_distilled_rebalanced.jsonl  primevul_numeric_triage_train_distilled_rebalanced.jsonl.manifest.json
scripts/: build_clean_bigvul_detect.py  build_juliet_numeric_triage.py  build_primevul_numeric_triage.py  distill_numeric_triage.py  eval_numeric_openai.py  modal_eval_numeric.py  modal_train_detect.py  rebalance_numeric_triage.py
src/rl_secdef/: __init__.py  benchmark_hf.py  benchmark_numeric.py
src/rl_secdef/data/: __init__.py  bigvul_clean.py  eval_builder.py  juliet_clean.py  primevul_numeric.py
src/rl_secdef/runner/: __init__.py  numeric_triage.py
tests/: __init__.py  conftest.py  test_numeric_triage.py  test_primevul_numeric.py  test_rebalance_numeric.py
