[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rl-secdef"
version = "0.1.0"
description = "RL-based defensive cybersecurity agent training"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "transformers>=4.40.0",
    "accelerate>=0.30.0",
    "peft>=0.10.0",
    "trl>=0.27.0",
    "datasets>=2.18.0",
    "evaluate>=0.4.0",
    "torch>=2.2.0",
    "pytest>=8.0.0",
    "docker>=7.0.0",
    "pyyaml>=6.0",
    "jsonlines>=4.0.0",
    "rich>=13.0.0",
    "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "mypy>=1.9.0",
    "pre-commit>=3.7.0",
]
mlx = [
    "mlx>=0.10.0",
    "mlx-lm>=0.10.0",
]

[project.scripts]
rl-secdef = "rl_secdef.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/rl_secdef"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
